...
    </string>

    <string name="app_id">br.edu.ufcg.embedded.motofest</string>

    <string name="app_name">MotoFest</string>
    <string name="app_full_name">MotoFest 2015</string>
    <string name="title_map">Map</string>
    <string name="title_activity_camera">Camera</string>
    <string name="no_camera">This device has no camera</string>
    <string name="camera_not_found">Camera not available</string>
    <string name="error_create_media">Error creating media file</string>
    <string name="img_saved">Image Saved on Gallery Successfully</string>
    <string name="carregando_localizacao">Loading Location</string>
    <string name="to_motofest">Motofest 2015</string>
    <string name="my_location">My Location</string>
    <string name="enable_gps">Enable either GPS or any other location service. Click OK to go to location services settings to let you do so</string>
    <string name="shout_route">Trace Route</string>
    <string name="bt_wifi">Wi-Fi</string>
    <string name="bt_mobile_network">Mobile Network</string>
    <string name="enable_network">Enable Internet Connection to use this feature. Click Wifi to open Wifi settings or Mobile Network service to enable your data network</string>
    <string name="bt_cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="pinpoint">Markers</string>
    <string name="programacao">Schedule</string>
    <string name="apoio">Sponsors</string>

    <string name="hoje">Today</string>
    <string name="sun">Sunday</string>
    <string name="mon">Monday</string>
    <string name="tue">Tuesday</string>
    <string name="wed">Wednesday</string>
...


    <string name="frase">The Mega Northeast International Event</string>

    <string name="agora">As it is now:</string>
    <string name="comeco">How everything started:</string>
    <string name="partners">Partners</string>

    <!-- Motoclubes parceiros -->
    <string name="Motoclube">Motorcycle Clubs</string>
    <string name="Motoclube1">ROTA 230</string>
    <string name="Motoclube1_sub">FACÇÃO RJ,SP,PB</string>
    <string name="Motoclube2">MISSÕES SOBRE RODAS</string>
...

    <string name="bt_markers">Markers</string>
    <string name="notification_title_1">There are only 30 days for Motofest Campina Grande, anxious?</string>
    <string name="notification_title_2">There are only 15 days for Motofest Campina Grande, anxious?</string>
    <string name="notification_title_3">There are only 7 days for Motofest Campina Grande, anxious?</string>

    <string name="about">About</string>
    <string name="action_share">Share</string>
    <string name="action_rate">Rate</string>
    <string name="help">Help</string>
    <string name="contact_us">Contact us</string>>
    <string name="action_feedback">Contact us</string>

    <string name="add_avaliation">Add your avaliation…</string>
    <string name="the_event">The Event</string>

    <string name="programacao_descricao">Check out the entire schedule of Motofest 2015.</string>
    <string name="youtube">Youtube</string>
    <string name="youtube_descricao">Click this icon to listen to the songs of the attractions that will perform at the event.</string>
    <string name="mapa_descricao">See event local\'s map and check the location of the booths, stages, health center and more</string>
    <string name="mark">Marker</string>
    <string name="marker_decricao">Learn how to find accommodation, booths, toilets, health center and more</string>
    <string name="camera_descricao">Get your friends to take photos and thematic selfies during Motofest 2015. You can save them on your device and share them on social networks.</string>
    <string name="main_camera_descricao">Use the your device main camera and continue taking custom photos</string>
    <string name="selfie_descricao">Take thematic selfies with your friends.</string>
    <string name="photo">Camera</string>
    <string name="main_camera">Main Camera</string>
    <string name="selfie">Selfie</string>
    <string name="download">Save Image</string>
    <string name="download_descricao">Save a photo on your device and view it whenever you want.</string>
...
    <string name="sending_message">Sending…</string>

    <string name="sending_avaliation_title">Please wait…</string>
    <string name="sending_avaliation">Sending avaliation…</string>

    <string name="item_menu">ITEM MENU</string>
    <string name="avaliation_text">The organization of the 2015 Motofest want to know your opinion about the event.</string>
    <string name="avaliation_send">evaluate successfully sent</string>

    <string name="version">Version 1.0.2</string>
    <string name="copyright">2015 Copyright©\nEmbedded Systems and Pervasive Computing Lab - UFCG -Brazil</string>
    <string name="logon_needed">To have access to the timeline you must be logged</string>
    <string name="timeline">Timeline</string>

    <string name="days">D</string>
    <string name="hours">H</string>
    <string name="minutes">M</string>
    <string name="seconds">S</string>

    <string name="desenvolvedores">Developers:\nBruno Rocha, Caio Vidal,\nLucas Matos, Pedro Henriques</string>

    <string name="title_activity_settings">SettingsActivity</string>

    <string name="action_settings">Settings</string>
    <string name="designers">Designers: \nAlex Galvão, Aristóteles Júnior, Felipe Malhaeiros, Isadora Vasconcelos</string>
    <string name="modificacoes">Reports in timeline</string>
    <string name="notificao">Silent notification</string>
    <string name="tela">Home screen</string>
    <string name="Exibir">Show splash screen when the application starts</string>
    <string name="reproduzir">Play sounds when starting</string>

    <string name="message_error">Tap to try again</string>


    <string name="action_logout">Logout</string>
    <string name="tema">Motofest 2015</string>
    <string name="tempo">00D 00H 00M 00S</string>
    <string name="flash">Flash</string>
    <string name="flash_descricao">Enables or disables the flash for better picture quality</string>
    <string name="texto2">Rating required</string>
    <string name="seconds_ago">Seconds ago</string>
...
    <string name="no_app_to_share">To share, you need to have installed Facebook, Instagram, Whatsapp or Twitter application.</string>
    <string name="choose_app">"Choose app to share"</string>
    <string name="share_text">I went to the 10th Campina Moto Fest, the International Meeting of Motorcyclists and Moto-Clubs in Campina Grande!</string>

    <!-- Marcadores -->
    <string name="accommodarion">Accommodarion</string>
    <string name="booth">Booth</string>
    <string name="parking">Parking</string>
    <string name="food_court">Food court</string>
    <string name="booth_inscriptions">Booth Inscriptions</string>
    <string name="booth_fome_zero">Booth of Fome Zero</string>
    <string name="wc">WC</string>
    <string name="stage">Stage</string>
    <string name="blips">Blips</string>
    <string name="pavilion">Pavilion</string>
    <string name="dealers">Dealers</string>
    <string name="security">Security</string>
    <string name="exit">Exit</string>
    <string name="login_success">Login successfully performed</string>
    <string name="logout_success">Logout successfully performed</string>
    <string name="login_error">Error when making login</string>
    <string name="not_support">Not support</string>
    <string name="parceiros">motorcycle clubs Partners</string>
...
