<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.edu.ufcg.embedded.motofest.activity.Activity_Patrocinadores"
    android:background="#FFFF"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView2"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <ImageView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView1"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:background="@drawable/logo_apoio_pmcg"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="130dp"
                android:id="@+id/imageView2"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/sedepmcg"
                android:layout_gravity="center_horizontal"
                android:layout_below="@+id/textView6"/>


            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/imageView4"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/amde"
                android:layout_gravity="center_horizontal"
                android:layout_below="@+id/textView10"/>


            <ImageView
                android:layout_width="200dp"
                android:layout_height="180dp"
                android:id="@+id/imageView5"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/logo_apoio_sttp"
                android:layout_gravity="center_horizontal"
                android:layout_below="@+id/textView12"/>


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView6"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/logo_apoio_fomezero"
                android:layout_gravity="center_horizontal"
                android:layout_below="@+id/textView14"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView7"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/logo_apoio_sebrae"
                android:layout_gravity="center_horizontal"
                android:layout_below="@+id/textView16"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
