...
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="100"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/map_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </FrameLayout>

        <LinearLayout
            android:id="@+id/tela_total"
...
            fab:fab_addButtonPlusIconColor="@color/branco"
            fab:fab_labelStyle="@style/menu_labels_white_style"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp">

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/action_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_title="@string/to_motofest"
                fab:fab_colorNormal="@color/branco"
                fab:fab_colorPressed="@color/background"
                fab:fab_icon="@drawable/ic_bt_map_pp"/>

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/action_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_title="@string/my_location"
                fab:fab_colorNormal="@color/branco"
                fab:fab_colorPressed="@color/background"
                fab:fab_icon="@drawable/ic_bt_map_mylocation"/>
...
